version/dev/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/FE/CDB/CMGRPCommand.rst.txt
.. vale off



:class:`CMGRPCommand`
=====================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.FE.CDB.CMGRPCommand

   Bases: :py:obj:`object`


   
   Represents a CMGRP command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CMGRPCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Aname`
            - Gets the assembly name.
          * - :py:attr:`~Cnames`
            - Gets the component and/or assembly names.
          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.







Property detail
---------------
.. py:property:: Aname
   :type: Optional[System.String]

   
   Gets the assembly name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Cnames
   :type: Optional[System.Collections.Generic.IReadOnlyList[System.String]]

   
   Gets the component and/or assembly names.
















   ..
       !! processed by numpydoc !!

.. py:property:: Index
   :type: Optional[System.UInt32]

   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[System.String]

   
   Gets the command name.
















   ..
       !! processed by numpydoc !!







.. vale on